--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
 
     <script type="text/javascript" src="browserdetect.js"></script>
     <script type="text/javascript" src="lib/utils/dist/utils.js"></script>
+    <script type="text/javascript" src="lib/extensions/dist/extensions.js"></script>
     <script type="text/javascript" src="lib/jquery/dist/jquery.js"></script>
     <script type="text/javascript" src="lib/jmespath.js/artifacts/jmespath.js"></script>
     <script type="text/javascript" src="lib/json-editor/dist/jsoneditor.js"></script>
