--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
      -->
 
     <main>
-        <div class="uv" data-no-load="true" data-config="/examples/config.json" style="width:924px; height:668px; background-color: #000"></div>
+        <div class="uv" data-no-load="true" data-config="/config.json" style="width:924px; height:668px; background-color: #000"></div>
     </main>
 
     <footer style="display: none">
