--- a/mobile.html
+++ b/mobile.html
@@ -20,7 +20,7 @@
 </head>    
 <body>
 
-<div class="uv left" data-locale="en-GB:English (GB),cy-GB:Cymraeg" data-uri="http://api.bl.uk/metadata/iiif/ark:/81055/vdc_100022545251.0x000002/manifest.json" style="background-color: #000"></div>
+<div class="uv left" data-config="/examples/config.json" data-uri="http://api.bl.uk/metadata/iiif/ark:/81055/vdc_100022545251.0x000002/manifest.json" style="background-color: #000"></div>
 
 <script type="text/javascript" id="embedUV" src="http://universalviewer.io/examples/uv/lib/embed.js"></script><script type="text/javascript">/* wordpress fix */</script>
 
