--- a/mobile.html
+++ b/mobile.html
@@ -20,9 +20,9 @@
 </head>    
 <body>
 
-<div class="uv left" data-config="/examples/config.json" data-uri="http://api.bl.uk/metadata/iiif/ark:/81055/vdc_100022545251.0x000002/manifest.json" style="background-color: #000"></div>
+<div class="uv left" data-config="/config.json" data-uri="http://api.bl.uk/metadata/iiif/ark:/81055/vdc_100022545251.0x000002/manifest.json" style="background-color: #000"></div>
 
-<script type="text/javascript" id="embedUV" src="http://bltesters.azurewebsites.net/examples/uv/lib/embed.js"></script><script type="text/javascript">/* wordpress fix */</script>
+<script type="text/javascript" id="embedUV" src="http://bltesters.azurewebsites.net/uv/lib/embed.js"></script><script type="text/javascript">/* wordpress fix */</script>
 
 <!--<script type="text/javascript" id="embedUV" src="http://localhost:8001/src/lib/embed.js"></script><script type="text/javascript">/* wordpress fix */</script>-->
 
