--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
      -->
 
     <main>
-        <div class="uv" data-no-load="true" data-config="/examples/config.json" style="width:924px; height:668px; background-color: #000"></div>
+        <div class="uv" data-no-load="true" data-config="/config.json" style="width:924px; height:668px; background-color: #000"></div>
     </main>
 
     <footer style="display: none">
@@ -113,7 +113,7 @@
     <script type="text/javascript" src="lib/json-editor/dist/jsoneditor.js"></script>
     <script type="text/javascript" src="lib/jquery-plugins/dist/jquery-plugins.js"></script>
     <!--<script type="text/javascript" src="testids.js"></script>-->
-    <!--<script type="text/javascript" src="events.js"></script>-->
+    <script type="text/javascript" src="events.js"></script>
     <script type="text/javascript" src="examples.js"></script>
 
 </body>
